fix: widen track number column to prevent truncation on 100+ tracks

--- a/src/components/TrackList/TrackList.module.css
+++ b/src/components/TrackList/TrackList.module.css
@@ -57,7 +57,6 @@
 .table {
   width: 100%;
   border-collapse: collapse;
-  table-layout: fixed;
 }
 
 .table thead {
@@ -86,21 +85,20 @@
 }
 
 .thNum {
-  width: 48px;
+  width: 56px;
   padding-left: 20px !important;
   text-align: center !important;
 }
 
 .thTitle {
-  width: 35%;
 }
 
 .thArtist {
-  width: 25%;
+  width: 20%;
 }
 
 .thAlbum {
-  width: 25%;
+  width: 20%;
 }
 
 .thDuration {
@@ -148,7 +146,7 @@
 
 /* Cells */
 .cellNum {
-  width: 48px;
+  width: 56px;
   padding-left: 20px !important;
   text-align: center;
 }
